--- a/references/biblio.bib
+++ b/references/biblio.bib
@@ -284,6 +284,38 @@ langid = {english}
 }
 
 
+@misc{LazarusConstellation,
+  title = {The {{Lazarus Constellation}}},
+  publisher = {{Lexfo}},
+  url = {https://blog.lexfo.fr/ressources/Lexfo-WhitePaper-The_Lazarus_Constellation.pdf}
+}
+
+@misc{ProfilingEnigmaMystery,
+  title = {Profiling an Enigma: {{The}} Mystery of {{North Korea}}’s Cyber Threat Landscape},
+  publisher = {{HP Security Briefing Episode 16, August 2014}}
+}
+
+
+@online{SecurityInvestmentsConsume,
+  title = {Security {{Investments Consume SWIFT}}'s {{Profits}}},
+  url = {https://www.bankinfosecurity.com/security-investments-consume-swifts-profits-a-9988},
+  langid = {english}
+}
+
+@online{SWIFTLaunchesSWIFT2017,
+  title = {{{SWIFT}} Launches the ‘{{SWIFT Information Sharing}} and {{Analysis Centre}}’},
+  date = {2017-05-15},
+  journaltitle = {SWIFT},
+  url = {https://www.swift.com/news-events/news/swift-launches-the-swift-information-sharing-and-analysis-centre},
+  langid = {english}
+}
+
+
+
+
+
+
+
 
 
 
